--- a/writing/draft-heterogeneity.rmd
+++ b/writing/draft-heterogeneity.rmd
@@ -34,7 +34,7 @@ figsintext        : yes
 figurelist        : no
 tablelist         : no
 footnotelist      : no
-lineno            : no
+lineno            : yes
 
 lang              : "english"
 class             : "man"
@@ -165,7 +165,7 @@ To examine heterogeneity of each of the 37 effects, we computed meta-analytic es
 
 In order to facilitate interpretation of our results, we estimated type I error and power of the Q-test of heterogeneity for each of the 37 effects under zero/small/medium/large heterogeneity ($I^2$ = 0/25/50/75%  respectively). In addition, we plotted $I^2$-distributions across effects at these four heterogeneity levels and compared them with the distribution of the observed $I^2$ estimates of the 37 effects. To do so we simulated results for each effect given the number of studies, k, and the sample sizes, $N_k$, of those studies (osf.io/gbf4u/). We simulated the distribution of $I^2$ for correlation, standardized mean difference, and mean difference effect size measures. Because the standard error of the observed effect size in case of odds ratios and risk differences is strongly affected by assumptions of the probability of success in both treatment groups, we did not directly simulate the $I^2$ distribution for these effect size measures. In these cases, we used the information on study sample sizes and treated the effects as mean differences in our simulations. 
 
-As our concern was heterogeneity, for convenience we set the true effect size to zero in our simulations. This should not affect the results for correlations or mean differences, as estimates of effect size and heterogeneity for these measures are statistically independent. For standardized mean differences we expect negligible effects on the results, because while these estimates of effect size are positively correlated to their standard errors, the within study variance $\sigma^2$ was kept constant across studies. Nonetheless, as a sensitivity test we also ran the analysis with 'medium' effect sizes [@Cohen1988], see Appendix A (osf.io/bsjhu/).
+As our concern was heterogeneity, for convenience we set the true effect size to zero in our simulations. This should not affect the results for correlations or mean differences, as estimates of effect size and heterogeneity for these measures are statistically independent. For standardized mean differences we expect negligible effects on the results, because while these estimates of effect size are positively correlated to their standard errors, the within study variance $\sigma^2$ was kept constant across studies. As a sensitivity test we ran the analysis with 'medium' effect sizes [@Cohen1988] and found the same average power at the different heterogeneity levels, see Appendix A (osf.io/bsjhu/).
 
 In case the observed effect was a correlation, one run of a simulation proceeded as follows. First, we randomly sampled K Fisher-transformed true correlations $\rho_k$ from a normal distribution with mean 0 and heterogeneity (variance) $\tau^2$. Fisher's z-transformation is a normalizing correlation transformation that ranges from negative infinity to positive infinity, though except for extreme correlations it stays close to the -1 to 1 range [@10.2307/2331838; @Fisher1921]. Second, for each of the K true Fisher-transformed correlations we sampled one Fisher-transformed observed correlation from a normal distribution with mean $\rho_k$ and variance $1 /(N_k - 3)$. Finally, we fitted a random-effects meta-analysis with REML and estimated $I^2$ for that run. In the simulations, we varied the between-studies standard deviation $\tau$ between 0.000 and 0.50 in increments of 0.005, and used 1,000 runs at each step to approximate the distribution of $I^2$ at that value for true heterogeneity.
 
@@ -253,7 +253,7 @@ knitr::include_graphics("../figures/tau-I2.png")
 
 _Figure 1. Result of simulation relating $I^2$-values to between studies standard deviation. Each line represent one of 37 effects. Tau is not directly comparable across effect size measures. Code to reproduce figure: osf.io/zuwpg/_
 
-Estimated type I error and power for zero/small/medium/large heterogeneity are shown for each effect in Table 3. In all cases the type I error is conservative, as compared to the expected 5% error rate. Power to detect small heterogeneity was low, ranging between `r 100*round(min(het$small), digits = 2)`% and `r 100*round(max(het$small), digits = 2)`%, with an average of `r 100*round(mean(het$small), digits = 2)`%. Power to detect medium heterogeneity was generally very good, with an average of `r 100*round(mean(het$medium), digits = 2)`% power, but goes down to as low as `r 100*round(min(het$medium), digits = 2)`% for several effects with low K. Power to detect strong heterogeneity was excellent across the board. To conclude, even though for most projects the number of included studies (median `r quantile(sort(het$k), .5)[[1]]`) and number of participants (median 102 per study) was relatively large, only power to detect medium or larger heterogeneity was good to excellent, whereas power to detect small heterogeneity was unacceptably low. Hence, even large multi-lab projects struggle to distinguish zero from small heterogeneity.
+Estimated type I error and power for zero/small/medium/large heterogeneity are shown for each effect in Table 3. In all cases the type I error is approximately nominal, as compared to the expected 5% error rate. Power to detect small heterogeneity was low, ranging between `r 100*round(min(het$small), digits = 2)`% and `r 100*round(max(het$small), digits = 2)`%, with an average of `r 100*round(mean(het$small), digits = 2)`%. Power to detect medium heterogeneity was generally very good, with an average of `r 100*round(mean(het$medium), digits = 2)`% power, but goes down to as low as `r 100*round(min(het$medium), digits = 2)`% for several effects with low K. Power to detect strong heterogeneity was excellent across the board. To conclude, even though for most projects the number of included studies (median `r quantile(sort(het$k), .5)[[1]]`) and number of participants (median 102 per study) was relatively large, only power to detect medium or larger heterogeneity was good to excellent, whereas power to detect small heterogeneity was unacceptably low. Hence, even large multi-lab projects struggle to distinguish zero from small heterogeneity.
 
 Figure 2 shows the distribution of $I^2$ at different heterogeneity levels and a histogram of the observed effects. The shortest bars in the histogram correspond to the heterogeneity estimate of one effect. The considerable overlap of the distributions illustrates why sufficient power can be difficult to achieve, and why confidence intervals for $I^2$ are often wide. In particular, the dispersion of the distribution under small heterogeneity is illustrative of the low power to be expected under such circumstances. Given the histogram of observed effect sizes and densities of the distributions (height of the curves), the majority of observed effects are most likely to have zero or zero to small heterogeneity.  Only two effects appear to be of medium heterogeneity and three of large.
 
