--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -1,6 +1,6 @@
 ---
 title: "Tables"
-author: "Anton Ohlsson Collentine"
+author: "Limited evidence for widespread heterogeneity in psychology"
 output: pdf_document
 ---
 
@@ -37,11 +37,11 @@ rel <- c("R = .6", "R = .7", "R = .8")
 rooted_relabilities <- sweep(rooted_relabilities, 2, rho, "*")
 rooted_relabilities <- data.frame(rel, rooted_relabilities)
 
-diff_row <- data.frame(rel = "Standard deviation", X1 = sd(rooted_relabilities$X1), X2 = sd(rooted_relabilities$X2), X3 = sd(rooted_relabilities$X3))
+diff_row <- data.frame(rel = "Standard deviation R", X1 = sd(rooted_relabilities$X1), X2 = sd(rooted_relabilities$X2), X3 = sd(rooted_relabilities$X3))
 
 het_demo <- rbind(rooted_relabilities, diff_row)
 
-het_demo %>% knitr::kable("latex", booktabs = T, col.names = c("", "Rho = 0", "Rho = .3", "Rho = .5"), digits = 2) %>% 
+het_demo %>% knitr::kable("latex", booktabs = T, col.names = c("Effect size", "Rho = 0", "Rho = .3", "Rho = .5"), digits = 2) %>% 
   kable_styling(position = "left") %>% 
   footnote(threeparttable = TRUE,
            general = "R = square root of the multiplied reliabilities. Rho = true effect size. Code to reproduce table: osf.io/kf6pt/") %>% 
@@ -151,7 +151,7 @@ het %>% knitr::kable("latex", align = "c", booktabs = TRUE,  digits = 2, col.nam
   add_header_above(c(" " = 8, "Heterogeneity & error/power" = 4)) %>% 
   kable_styling("scale_down", font_size = 7) %>%
   footnote(threeparttable = TRUE, escape = FALSE,
-           general = " Effects were estimated in metafor using REML. The following effects are odds ratios transformed into standardized mean differences: 'Allowed vs. forbidden', 'Gain vs. loss framing', 'Norm of reciprocity', 'Low vs. high category scales'. RP = Replication Project, k = no. primary studies, Estimate = Point estimates of effect sizes, ci.lb = lower bound of $I^2$ 95\\\\% confidence interval, ci.ub = upper bound of $I^2$ 95\\\\% confidence interval. SMD = Standardized Mean difference (Hedge's g), MD = Mean Difference, RD = Risk Difference, r = correlation. Code to reproduce table: osf.io/kf6pt/",
+           general = "Effects were estimated in metafor using REML. The following effects are odds ratios transformed into standardized mean differences: 'Allowed vs. forbidden', 'Gain vs. loss framing', 'Norm of reciprocity', 'Low vs. high category scales'. RP = Replication Project, k = no. primary studies, Estimate = Point estimates of effect sizes, ci.lb = lower bound of $I^2$ 95\\\\% confidence interval, ci.ub = upper bound of $I^2$ 95\\\\% confidence interval. SMD = Standardized Mean difference (Hedge's g), MD = Mean Difference, RD = Risk Difference, r = correlation. Code to reproduce table: osf.io/kf6pt/",
            alphabet = "These effects were simulated as standardized mean differences")
 
 
