Minor corrections, commas etc

--- a/writing/draft-heterogeneity.rmd
+++ b/writing/draft-heterogeneity.rmd
@@ -23,7 +23,7 @@ affiliation:
     institution   : "Department of Sociology, Faculty of Social and Behavioural Sciences, Utrecht University, the Netherlands"
 
 abstract: |
-  We examined the evidence for heterogeneity (of effect sizes) and explored the correlation between heterogeneity and effect size in a sample of 37 effect sizes from ten pre-registered multi-lab replication projects in psychology. We found limited heterogeneity; only 4/37 (11%) effects had significant heterogeneity, and most effects (32/37; 86%) were most likely to have zero to small heterogeneity. Power to detect small heterogeneity, was low for all projects (mean 36%), but good to excellent for medium and large heterogeneity. As anticipated, we found a strong correlation between observed effect size and heterogeneity in our sample (R^2^ = .61). Our results suggest that an association between heterogeneity and effect size may need to be considered when estimating heterogeneity, and a lack of evidence to indicate widespread heterogeneity in psychology.
+  We examined the evidence for heterogeneity (of effect sizes) and explored the correlation between heterogeneity and effect size in a sample of 37 effect sizes from ten pre-registered multi-lab replication projects in psychology. We found limited heterogeneity; only 7/37 (19%) effects had significant heterogeneity, and most effects (32/37; 86%) were most likely to have zero to small heterogeneity. Power to detect small heterogeneity was low for all projects (mean 36%), but good to excellent for medium and large heterogeneity. As anticipated, we found a strong correlation between observed effect size and heterogeneity in our sample (R^2^ = .61). Our results suggest that an association between heterogeneity and effect size may need to be considered when estimating heterogeneity, and a lack of evidence to indicate widespread heterogeneity in psychology.
   
 keywords          : "heterogeneity, meta-analysis, replication, psychology, many labs, registered replication reports"
 wordcount         : "128"
@@ -85,7 +85,7 @@ Tests of heterogeneity typically have low statistical power in many practical si
 
 ###Association between effect size and heterogeneity
 
-Effect size is likely associated with heterogeneity. Intuitively, it makes sense to believe that if there is no meta-analytic effect there is nothing to moderate (i.e., no heterogeneity). However, a null or near null effect size estimate may arise from failure to consider contextual factors ('hidden moderators'; @10.2139/ssrn.2820883) and does not by itself imply the absence of heterogeneity. A large meta-analytic effect size on the other hand, can be expected to be associated with more heterogeneity. To illustrate, consider a meta-analysis of say, the correlation between neuroticism and procrastination. Each included study would need to measure the two variables somehow, possibly the same way across studies in the meta-analysis. However, because of individual differences and differences in study samples, measurement reliabilities may differ across studies either due to sampling variance (that the sample happens to be more or less homogeneous) or to differences in contextual factors (e.g., sampling population, measurement variables). This means that even if the underlying true effect size is the same, the observed correlation between the two variables will differ between studies [see also @Schmidt2015]. Keeping measurement reliabilities constant, differences in observed effect sizes will increase with the underlying true effect, resulting in more variability being ascribed to heterogeneity. More formally, an observed correlation $r_{xy}$ can be expressed as the product of the true correlation or effect size, $\rho_{xy}$, multiplied by the square root of the measurement reliabilities for X ($R_{xx'}$) and Y ($R_{yy'}$): $r_{xy} = \rho_{xy} \times \sqrt{R_{xx'}} \times \sqrt{R_{yy'}}$. As such, keeping constant study differences in $\sqrt{R_{xx'}} \times \sqrt{R_{yy'}}$ while increasing true effect size $\rho_{xy}$ increases the observed differences between studies, thereby increasing heterogeneity of observed effect sizes (see Table 1). We therefore explore with a meta-meta-analysis if a positive association exists between effect size and heterogeneity in the sample of pre-registered multi-lab replication projects in psychology.
+Effect size is likely associated with heterogeneity. Intuitively, it makes sense to believe that if there is no meta-analytic effect there is nothing to moderate (i.e., no heterogeneity). However, a null or near null effect size estimate may arise from failure to consider contextual factors ['hidden moderators'; @10.2139/ssrn.2820883] and does not by itself imply the absence of heterogeneity. A large meta-analytic effect size on the other hand, can be expected to be associated with more heterogeneity. To illustrate, consider a meta-analysis of say, the correlation between neuroticism and procrastination. Each included study would need to measure the two variables somehow, possibly the same way across studies in the meta-analysis. However, because of individual differences and differences in study samples, measurement reliabilities may differ across studies either due to sampling variance (that the sample happens to be more or less homogeneous) or to differences in contextual factors (e.g., sampling population, measurement variables). This means that even if the underlying true effect size is the same, the observed correlation between the two variables will differ between studies [see also @Schmidt2015]. Keeping measurement reliabilities constant, differences in observed effect sizes will increase with the underlying true effect, resulting in more variability being ascribed to heterogeneity. More formally, an observed correlation $r_{xy}$ can be expressed as the product of the true correlation or effect size, $\rho_{xy}$, multiplied by the square root of the measurement reliabilities for X ($R_{xx'}$) and Y ($R_{yy'}$): $r_{xy} = \rho_{xy} \times \sqrt{R_{xx'}} \times \sqrt{R_{yy'}}$. As such, keeping constant study differences in $\sqrt{R_{xx'}} \times \sqrt{R_{yy'}}$ while increasing true effect size $\rho_{xy}$ increases the observed differences between studies, thereby increasing heterogeneity of observed effect sizes (see Table 1). We therefore explore with a meta-meta-analysis if a positive association exists between effect size and heterogeneity in the sample of pre-registered multi-lab replication projects in psychology.
 
 Table 1.
 
@@ -177,7 +177,7 @@ For mean differences (and hence also for risk ratios) we assumed a within-study 
 
 To approximate the statistical power of all 37 effects at zero, small, medium, and large heterogeneity we continued as follows. For each of the 37 effects we selected the values of $\tau$ which yielded the average value of _I^2^_ in the simulations closest to 25 (small), 50 (medium), and 75 (large). For these values of $\tau$ and for $\tau = 0$ (homogeneity) we again ran 10,000 simulations, and for each run _I^2^_ was calculated and the Q-test of heterogeneity was performed, yielding estimates of type I error (in case of homogeneity) and power (for heterogeneity) for each of the 37 effects. We considered a result significant when _p_ $\leq 0.05$ for the Q-test. The distributions of _I^2^_ for zero, small, medium, large heterogeneity, which we compared to the observed distribution of 37 effect sizes, was generated by pooling the 37 distributions of 10,000 _I^2^_ values in each category of heterogeneity. Hence these _I^2^_ distributions can be considered a mixture distribution of 37 distributions, using equal weights across all 37 effects. 
 
-To examine the correlation between effect size and _I^2^_ across all 37 effects we converted all effect sizes to a common metric. We first converted all effects into correlations (osf.io/h9pft/) and used the R-package metafor to estimate _I^2^_ and meta-analytic effects expressed as Fisher-transformed correlations (osf.io/zuwpg/). In doing so, we fitted random-effects models with metafor's default REML estimator. For mean differences we calculated the pooled standard deviation, [@Borenstein2009, p. 226], standardized the effect size and converted it to a correlation (p. 234) with a correction factor for unequal sample sizes (p. 234). In one case (RRR8), we first had to convert reported standard errors into pooled standard deviations (p.224). For risk differences and odds ratios we first added 1/2 to a cell if it was empty to avoid dividing by zero, next calculated the logarithmic odds ratio (p. 266), converted this to Cohen's d (p. 232) and then finally to a correlation. All formulas used are presented in Appendix B (osf.io/h4vfx/).  Since _I^2^_ is set to zero for the majority of cases under homogeneity (i.e., truncated), we also correlated effect size with the closely related heterogeneity estimate _H^2^_ [@10.1002/sim.1186] as a sensitivity analysis. The _H^2^_ index is calculated as $H2 = Q  / (k - 1)$ and equals $1 / (1 - _I^2^_)$ for $I^2 \geq 0$. It ranges from zero to positive infinity, where a larger score indicates more heterogeneity, a score of one indicates homogeneity, and a score between zero and one thus indicates 'excessive' homogeneity. 
+To examine the correlation between effect size and _I^2^_ across all 37 effects we converted all effect sizes to a common metric. We first converted all effects into correlations (osf.io/h9pft/) and used the R-package metafor to estimate _I^2^_ and meta-analytic effects expressed as Fisher-transformed correlations (osf.io/zuwpg/). In doing so, we fitted random-effects models with metafor's default REML estimator. For mean differences we calculated the pooled standard deviation, [@Borenstein2009, p. 226], standardized the effect size and converted it to a correlation (p. 234) with a correction factor for unequal sample sizes (p. 234). In one case (RRR8), we first had to convert reported standard errors into pooled standard deviations (p.224). For risk differences and odds ratios we first added 1/2 to a cell if it was empty to avoid dividing by zero, next calculated the logarithmic odds ratio (p. 266), converted this to Cohen's d (p. 232) and then finally to a correlation. All formulas used are presented in Appendix B (osf.io/h4vfx/).  Since _I^2^_ is set to zero for the majority of cases under homogeneity (i.e., truncated), we also correlated effect size with the closely related heterogeneity estimate _H^2^_ [@10.1002/sim.1186] as a sensitivity analysis. The _H^2^_ index is calculated as $H2 = Q  / (k - 1)$ and equals $1 / (1 - I^2)$ for $I^2 \geq 0$. It ranges from zero to positive infinity, where a larger score indicates more heterogeneity, a score of one indicates homogeneity, and a score between zero and one thus indicates 'excessive' homogeneity. 
    
 
 ##Results
@@ -246,7 +246,7 @@ het %>% knitr::kable(digits = 2, col.names = c("RP", "Effect", "k", "Effect type
 
 ###_I^2^_ estimates and confidence intervals
 
-There is limited evidence for widespread heterogeneity across the examined effects. Of the 37 effects, `r sum(het$s_I2 >= 62.5)` / `r nrow(het)` (`r 100*round(sum(het$s_I2 >= 62.5) / nrow(het), digits = 2)`%) have _I^2^_ estimates that best correspond to large heterogeneity (_I^2^_ = 75%), `r sum(het$s_I2 < 62.5 & het$s_I2 >= 37.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 62.5 & het$s_I2 >= 37.5) / nrow(het), digits = 2)`%) to medium heterogeneity (_I^2^_ = 50%), `r sum(het$s_I2 < 37.5 & het$s_I2 >= 12.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 37.5 & het$s_I2 >= 12.5) / nrow(het), digits = 2)`%)  to small heterogeneity (_I^2^_ = 25%) and `r sum(het$s_I2 < 12.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 12.5) / nrow(het), digits = 2)`%) to zero heterogeneity (_I^2^_ = 0%). However, despite a relatively large number of studies and total sample size for most projects (see Table 2), Table 3 shows very wide confidence intervals (spanning 50% or more) for many effects.  The lower bound _I^2^_ confidence interval excludes zero for only `r sum(het$s_ci.lb > 0)`/`r nrow(het)` effects (`r 100*round(sum(het$s_ci.lb > 0) / nrow(het), digits = 2)`%; Table 3), all part of the ML1 project. The percentage of heterogeneity estimates larger than 0 (`r sum(het$s_I2 > 0)`/`r nrow(het)`; `r 100*round(sum(het$s_I2 > 0) / nrow(het), digits = 2)`%, two effects had _I^2^_ < .005 and are rounded down in Table 3) suggests heterogeneity for at least some effects, as this percentage is higher than the expected frequency of non-zero estimates under homogeneity (46%, or about 17/37), based on the chi-square distribution and average k across projects. 
+There is limited evidence for widespread heterogeneity across the examined effects. Of the 37 effects, `r sum(het$s_I2 >= 62.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 >= 62.5) / nrow(het), digits = 2)`%) have _I^2^_ estimates that best correspond to large heterogeneity (_I^2^_ = 75%), `r sum(het$s_I2 < 62.5 & het$s_I2 >= 37.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 62.5 & het$s_I2 >= 37.5) / nrow(het), digits = 2)`%) to medium heterogeneity (_I^2^_ = 50%), `r sum(het$s_I2 < 37.5 & het$s_I2 >= 12.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 37.5 & het$s_I2 >= 12.5) / nrow(het), digits = 2)`%)  to small heterogeneity (_I^2^_ = 25%) and `r sum(het$s_I2 < 12.5)`/`r nrow(het)` (`r 100*round(sum(het$s_I2 < 12.5) / nrow(het), digits = 2)`%) to zero heterogeneity (_I^2^_ = 0%). However, despite a relatively large number of studies and total sample size for most projects (see Table 2), Table 3 shows very wide confidence intervals (spanning 50% or more) for many effects.  The lower bound _I^2^_ confidence interval excludes zero for only `r sum(het$s_ci.lb > 0)`/`r nrow(het)` effects (`r 100*round(sum(het$s_ci.lb > 0) / nrow(het), digits = 2)`%; Table 3), all part of the ML1 project. The percentage of heterogeneity estimates larger than 0 (`r sum(het$s_I2 > 0)`/`r nrow(het)`; `r 100*round(sum(het$s_I2 > 0) / nrow(het), digits = 2)`%, two effects had _I^2^_ < .005 and are rounded down in Table 3) suggests heterogeneity for at least some effects, as this percentage is higher than the expected frequency of non-zero estimates under homogeneity (46%, or about 17/37), based on the chi-square distribution and average k across projects. 
 
 ###_I^2^_ and power
 
@@ -258,7 +258,7 @@ knitr::include_graphics("../figures/tau-I2.png")
 
 _Figure 1. Result of simulation relating _I^2^_-values to between studies standard deviation. Each line represent one of 37 effects. Tau is not directly comparable across effect size measures. Code to reproduce figure: osf.io/zuwpg/_
 
-Estimated type I error and power for zero/small/medium/large heterogeneity are shown for each effect in Table 3. In all cases the type I error is approximately nominal, as compared to the expected 5% error rate. Power to detect small heterogeneity was low, ranging from `r 100*round(min(het$small), digits = 2)`% to `r 100*round(max(het$small), digits = 2)`%, with an average of `r 100*round(mean(het$small), digits = 2)`%. Power to detect medium heterogeneity was generally very good, with an average of `r 100*round(mean(het$medium), digits = 2)`% power, but goes down to as low as `r 100*round(min(het$medium), digits = 2)`% - `r 100*round(sort(het$medium)[2], digits = 2)` for several effects with low K (i.e., effects from RRR3). Power to detect strong heterogeneity was excellent across the board. To conclude, even though for most projects the number of included studies (median `r quantile(sort(het$k), .5)[[1]]`) and number of participants (median 102 per study) was relatively large, only power to detect medium or larger heterogeneity was good to excellent, whereas power to detect small heterogeneity was unacceptably low. Hence, even large multi-lab projects struggle to distinguish zero from small heterogeneity.
+Estimated type I error and power for zero/small/medium/large heterogeneity are shown for each effect in Table 3. In all cases the type I error is approximately nominal, as compared to the expected 5% error rate. Power to detect small heterogeneity was low, ranging from `r 100*round(min(het$small), digits = 2)`% to `r 100*round(max(het$small), digits = 2)`%, with an average of `r 100*round(mean(het$small), digits = 2)`%. Power to detect medium heterogeneity was generally very good, with an average of `r 100*round(mean(het$medium), digits = 2)`% power, but goes down to as low as `r 100*round(min(het$medium), digits = 2)` - `r 100*round(sort(het$medium)[2], digits = 2)`% for several effects with low K (i.e., effects from RRR3). Power to detect strong heterogeneity was excellent across the board. To conclude, even though for most projects the number of included studies (median `r quantile(sort(het$k), .5)[[1]]`) and number of participants (median 102 per study) was relatively large, only power to detect medium or larger heterogeneity was good to excellent, whereas power to detect small heterogeneity was unacceptably low. Hence, even large multi-lab projects struggle to distinguish zero from small heterogeneity.
 
 Figure 2 shows the distribution of _I^2^_ at different heterogeneity levels and a histogram of the observed effects. The shortest bars in the histogram correspond to the heterogeneity estimate of one effect. The considerable overlap of the distributions illustrates why sufficient power can be difficult to achieve, and why confidence intervals for _I^2^_ are often wide. In particular, the dispersion of the distribution under small heterogeneity is illustrative of the low power to be expected under such circumstances. Given the histogram of observed effect sizes and densities of the distributions (height of the curves), the majority of observed effects are most likely to have zero or zero to small heterogeneity. Only for five effects there seems to be substantial evidence that they originate from medium (two) or large true effects, as they fall outside the dominant densities of lower true effects.
 
@@ -280,11 +280,11 @@ _Figure 3. The correlation between A) _I^2^_ and effect size and B) _H^2^_ and e
 
 ##Discussion
 
-We examined the evidence for widespread heterogeneity in psychology and the correlation between effect size and heterogeneity, in a sample of ten pre-registered multi-lab replication projects in psychology. These ten projects examined a total of 37 primary outcome variables and arguably represent the best, least biased, meta-analytic data currently available in psychology. To aid interpretation we also estimated power of each project to find zero/small/medium/large heterogeneity as defined by @10.1136/bmj.327.7414.557 and approximated the distributions of _I^2^_ under these four heterogeneity levels. Our results showed that by far most effects in our sample likely had zero (`r 1 - 100*round(sum(het$s_ci.lb > 0) / nrow(het), digits = 2)`% of confidence intervals included zero heterogeneity) to small heterogeneity, that power to distinguish between zero and small heterogeneity was low for all projects, and that heterogeneity was strongly correlated with effect size in our sample.
+We examined the evidence for widespread heterogeneity in psychology and the correlation between effect size and heterogeneity, in a sample of ten pre-registered multi-lab replication projects in psychology. These ten projects examined a total of 37 primary outcome variables and arguably represent the best, least biased, meta-analytic data currently available in psychology. To aid interpretation we also estimated power of each project to find zero/small/medium/large heterogeneity as defined by @10.1136/bmj.327.7414.557 and approximated the distributions of _I^2^_ under these four heterogeneity levels. Our results showed that by far most effects in our sample likely had zero (`r 100*round(1 - sum(het$s_ci.lb > 0) / nrow(het), digits = 2)`% of confidence intervals included zero heterogeneity) to small heterogeneity, that power to distinguish between zero and small heterogeneity was low for all projects, and that heterogeneity was strongly correlated with effect size in our sample.
 
 In addition to most effects showing no or small heterogeneity, the effects that showed significant evidence for heterogeneity were primarily effects that might have been expected to be sensitive to changes in sampling population. That is, save two effects (Anchoring - Everest and IAT correlation math), all other effects that demonstrated heterogeneity were related to the US. They either asked questions about the US (anchoring effects), persons related to the US (Quote attribution) or issues that are well-known to generate strong debate in the US (i.e., free speech; allowed vs. forbidden). Although ML1 tested US vs. non-US as a moderator of heterogeneity and found very small effect sizes, these are all effects for which heterogeneous responses also within the US would be unsurprising (e.g., someone living close to Chicago is more likely to know the population of Chicago). Our finding that heterogeneity appears to be small or non-existent except where it might have been expected, is an argument against so called 'hidden moderators', or unexpected contextual sensitivity. Indeed, our results imply that effects cannot simply be assumed to vary extensively "across time, situations and persons" [@10.3389/fpsyg.2017.00879, p.14] and that we should not expect "minor, seemingly arbitrary and even theoretically irrelevant modifications in procedures" [@10.1186/s40359-016-0134-3, p.6] to have large impact on effect estimates. That is, our results imply that citing heterogeneity as a reason for non-replication of an effect is unwarranted unless predicted _a priori_ [@10.1177/1745691617708630]. 
 
-In view of the fact that most effects in our sample likely had zero to small heterogeneity, the lack of power to distinguish between these two heterogeneity levels is of concern. That heterogeneity is small is not the same as being negligible, as even small heterogeneity may have consequences for implementing interventions, the advancement of theory, and the the interpretation of research outcomes including replication studies. A suggestion to double the already very impressive number of participating labs and individuals of the largest replication projects in our sample seems unrealistic. The good news is that sufficient power to detect large and medium heterogeneity is realistically achievable for many meta-analyses. We therefore conclude that large (preferably preregistered) multi-lab studies are very valuable for increasing understanding of psychological phenomena.
+In view of the fact that most effects in our sample likely had zero to small heterogeneity, the lack of power to distinguish between these two heterogeneity levels is of concern. That heterogeneity is small is not the same as being negligible, as even small heterogeneity may have consequences for implementing interventions, the advancement of theory, and the interpretation of research outcomes including replication studies. A suggestion to double the already very impressive number of participating labs and individuals of the largest replication projects in our sample seems unrealistic. The good news is that sufficient power to detect large and medium heterogeneity is realistically achievable for many meta-analyses. We therefore conclude that large (preferably preregistered) multi-lab studies are very valuable for increasing understanding of psychological phenomena.
 
 Heterogeneity amongst the studied effects was strongly associated with effect size. There are thus both good theoretical reasons, related to the measurement reliability of estimates, and empirical reasons to expect larger effect sizes to exhibit comparatively more heterogeneity when using observed effect sizes in a meta-analysis. This creates challenges in disentangling the roots of heterogeneity. Consequently, for researchers who wish to examine heterogeneity to further theory development, it may be desirable to endeavor to account for measurement reliability in the effects that are aggregated in meta-analyses. We recognize that not all measurements (e.g., behavioral) admit adjusting for reliability as easily as questionnaires, meaning a correlation between effect size and heterogeneity could at times be difficult to control for. Nonetheless, the extensive use of different scales in psychology means that for many meta-analysts there should be little reason not to control for measurement reliability when aggregating results. Controlling for measurement error, however, introduces the problem into the analysis that estimates of measurement reliability are themselves imprecise, which will affect the study effect size estimates and thereby the estimated overall effect size and heterogeneity.
 
