--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -180,8 +180,9 @@ ggplot(I2_dist, aes(x = I2, group = Heterogeneity, fill = Heterogeneity, linetyp
   theme(legend.position = c(0.85, 0.71),
         legend.background = element_rect(linetype = "solid", color = "black")) +
   scale_y_continuous(name = "Density") +
-  scale_x_continuous(name = expression(paste(I^2," index", sep = "")))
+  scale_x_continuous(name = expression(paste(I^2," index", sep = ""))) +
+  guides(fill = guide_legend(override.aes = list(alpha = c(rep(0.3, 4), 1))))
 
-# ggsave("../figures/density-I2.png", dpi = 600, height =  4 , width = 6.47)
+ggsave("../figures/density-I2.pdf", dpi = 600, height =  4, width = 6.47, device = cairo_pdf())
 ```
 
